--- a/7daystodie.service
+++ b/7daystodie.service
@@ -10,7 +10,7 @@ RestartSec=10
 User=vagrant
 Group=vagrant
 WorkingDirectory=/home/vagrant/7days
-ExecStartPre=/usr/games/steamcmd +@sSteamCmdForcePlatformType linux +force_install_dir /home/vagrant/7days +login anonymous +app_update 294420 +quit
+ExecStartPre=/usr/games/steamcmd/steamcmd.sh +@sSteamCmdForcePlatformType linux +force_install_dir /home/vagrant/7days +login anonymous +app_update 294420 +quit
 ExecStart=/home/vagrant/7days/startserver.sh -configfile=serverconfig.xml
 ExecStop=-/bin/bash -c "echo 'shutdown' | /usr/bin/telnet 127.0.0.1 8081"
 
